syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.andmal";
option java_outer_classname = "PagesGrpcProto";

package pages;

service PagesGrpc {
  rpc GetPage (PagesRequest) returns (PageReply) {}
  rpc GetPages(PagesRequest) returns (stream PageReply) {}
}

message PagesRequest {
  int64 id = 1;
}

message PageReply {
  int64 id = 1;
  string title = 2;
  string body = 3;
  string space = 4;
  int64 authorId = 5;
  int64 parentId = 6;
  string createdAt = 7;
  string lastUpdated = 8;
}
